Tue Dec  8 03:56:05 2015  Koichi Sasada  <ko1@atdot.net>

	* test/lib/iseq_loader_checker.rb: add iseq dumper/loader checker.
	  If you enable this checker (remove `#' in test/runner.rb),
	  you can see comparison results between an original iseq disassembed
	  result and dumped and loaded iseq disassembed result.

	  There are several bugs around there, because of inexact stack depth
	  calculation. Now, I leave these bugs because they are not critical
	  and difficult to solve completely.

	* test/runner.rb: require test/lib/iseq_loader_checker.rb but
	  disabled at default (commented out).

Tue Dec  8 03:45:47 2015  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: warn about kwargs performance in C
	  [Feature #11339] [ci skip]

Tue Dec  8 03:44:51 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_load): disable peephole optimization option
	  because apply it multiple times change the sequence.
	  (iseq != peephole_optimize(load(iseq.to_a)))

Tue Dec  8 03:43:21 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_build_from_ary): do not allocate table
	  if table_size is 0.

Tue Dec  8 03:30:34 2015  Eric Wong  <e@80x24.org>

	* ext/socket/unixsocket.c (unix_send_io): document args
	  (unix_recv_io): ditto
	* test/socket/test_unix.rb (test_fd_passing_class_mode): added

Tue Dec 08 02:21:35 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_translate): at the end of constructing an iseq,
	  call RubyVM::InstructionSequence.translate(iseq) if this method
	  is defined. If the return value is also an object of
	  RubyVM::InstructionSequence, then use it instead of created one.

	  For example, this method is useful to test iseq dumper/loader
	  such as RubyVM::InstructionSequence#to_a and rb_iseq_load().

	  Because this method is for such internal experimental usage,
	  the interface is not matured. For example, this interface has
	  no extensibility. Two or more translaters can not run
	  simultaneously.
